Fixed nowrap on code tags

--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -63,7 +63,7 @@ code {
   font-family: Menlo, monospace;
   font-size: 13px;
   background-color: #fcfcfc;
-  white-space: nowrap;
+
 }
 h2 + h3 {
   margin-top: 10px;
